CHANGELOG
--------------------------

ClanSphere 2011.4.3 >> 2013-XX-XX
___________________________________________________________

-> Fixed games mod version data not saved (hajo)
-> Fixed newsletter mod not handling name selection for clan and squad mod (palle)


ClanSphere 2011.4.2 >> 2013-10-14
___________________________________________________________

-- Recommended PHP version is now the last one that fixes a known issue: 5.4.6
-- Newer versions of PHP should work the same or even better

-> Added board repair page to fix thread metadata issues (hajo)
   Also helps to fix wrong data if your initial ClanSphere version was older than 2011
-> Added currency name option to cash module (hajo)
-> Fixed banners rotation not working when only one banner is found (hajo)
-> Fixed boardvotes not usable on different accounts due to same ip (tom08)
-> Fixed votes navlist random sort not used with mysqli database extension (hajo)


ClanSphere 2011.4.1 >> 2013-05-20
___________________________________________________________

-- Recommended PHP version changed to 5.4.15

-> Downgraded jQuery to 1.8.3 [R1]
-> Changed jabber info to no longer contain Google service examples (hajo)
   Google combined the services to Hangouts which is not compatible with jabber
-> Fixed board threads marked as unread for no reason due to deleted comments (hajo)
   This fix only affects the mass deletion of comments over the comments mod
-> Fixed users manage page turns not working in some cases (hajo) [R2]
-> Updated copyright information (hajo)


ClanSphere 2011.4 >> 2013-03-06
___________________________________________________________

-- Recommended PHP version changed to 5.4.12

-> Added jabber account data as a replacement for MSN (hajo)
   MSN Chat Service ends on 8th of april due to the fusion with Skype
-> Fixed articles listcat page switch not working (hajo)
-> Fixed board active and new page links to threads (patch by atajsic)