@@ -4,6 +4,7 @@ CHANGELOG
 ClanSphere 2011.4.3 >> 2013-XX-XX
 ___________________________________________________________
 
+-> Fixed banners edit containing multiple ways to remove the picture (hajo)
 -> Fixed games mod version data not saved (hajo)
 -> Fixed newsletter mod not handling name selection for clan and squad mod (palle)
 
